fix team gap

--- a/src/components/Team/team.scss
+++ b/src/components/Team/team.scss
@@ -66,7 +66,7 @@
     }
 
     .team-box {
-      // column-gap: 16px;
+      column-gap: 16px;
       row-gap: 53px;
       .team-item {
         .team-item-img {
